--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: qemu
         id: qemu
-        uses: docker/setup-qemu-action@1
+        uses: docker/setup-qemu-action@v1
 
 
       - name: Login to DockerHub
