--- a/dockerfile.v1
+++ b/dockerfile.v1
@@ -1,9 +1,9 @@
-FROM ubuntu:latest
+FROM node:alpine
 
 WORKDIR '/app'
 ENV NODE_OPTIONS=--openssl-legacy-provider
 COPY package.json .
-RUN npm install -g npm
+RUN npm install 
 
 COPY . .
 
