--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: qemu
+      - name: Set up QEMU
         id: qemu
         uses: docker/setup-qemu-action@v1
 
       - name: Buildx set-up
         id: buildx
         uses: docker/setup-buildx-action@v1
-
-      
-
 
       - name: Login to DockerHub
         uses: docker/login-action@v1 
@@ -37,9 +34,15 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          platforms: linux/riscv64, linux/amd64, linux/s390x
+          platforms: linux/amd64,linux/s390x,linux/arm64
           file: ./dockerfile.v1
           push: true
           tags: maciejrak/labx:gh_qemu
           labels: ${{ steps.meta.outputs.labels }}
-      
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
+
+      - name: Move cache
+        run: |
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
