--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,15 +34,9 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: ./
-          platforms: linux/amd64,linux/s390x,linux/arm64
+          platforms: linux/arm64, linux/amd64, linux/s390x
           file: ./dockerfile.v1
           push: true
           tags: maciejrak/labx:gh_qemu
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
-
-      - name: Move cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          
